[project]
name = "agentic-energy"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=2.0",
    "google-genai>=0.3",
    "google-cloud-aiplatform>=1.70",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "streamlit>=1.58.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.7",
    "mypy>=1.13",
    "playwright>=1.60.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real APIs (select with -m integration)",
]
